--- a/styles/hero.css
+++ b/styles/hero.css
@@ -3,6 +3,12 @@ section#hero {
   width: 100%;
   padding: 2.5rem 2rem;
   margin-inline: auto;
+  border: 5px black solid;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
 
   & h1 {
     max-width: 40rem;
@@ -29,7 +35,7 @@ section#hero {
   & h1 span {
     display: block;
 
-    animation: slideup 6s infinite ease;
+    animation: slideup 6s 2s infinite ease;
   }
 
   & .buttons {
@@ -68,6 +74,71 @@ section#hero {
       0 20px 12px rgba(0, 0, 0, 0.05),
       0 36px 15px rgba(0, 0, 0, 0.01);
     }
+  }
+
+  &>div:nth-child(2) {
+    display: block;
+    width: 100%;
+    max-width: 30.5rem;
+    height: 30.5rem;
+
+    border: solid 2px green;
+
+    & .content {
+      width: 100%;
+      height: 100%;
+      position: relative;
+    }
+
+    & img {
+      position: absolute;
+      width: 100%;
+    }
+
+    & img[src*="Ellipse"] {
+      width: 94%;
+      left: 3%;
+      top: 3%;
+
+      transform: translateX(200%);
+      animation: slidein 3s ease both;
+    }
+
+    & img[src*="patins"] {
+      z-index: 1;
+
+      transform: translateX(200%);
+      animation: slidein 3.5s ease both;
+    }
+
+    & img[src*="Stars1"] {
+      max-width: 5.5rem;
+      top: 32%;
+      z-index: 0;
+
+      transform: translateX(800%);
+      animation: slidein 3s ease both;
+    }
+
+    & img[src*="Stars2"] {
+      max-width: 2.5rem;
+      right: 0;
+      bottom: 35%;
+      z-index: 0;
+
+      transform: translateX(400%);
+      animation: slidein 2s 800ms ease both;
+    }
+  }
+}
+
+@keyframes slidein {
+  50% {
+    transform: translateX(-50px);
+  }
+
+  100% {
+    transform: translateX(0);
   }
 }
 
