--- a/styles/global.css
+++ b/styles/global.css
@@ -27,6 +27,10 @@ html, button {
   font: 500 1rem/1.5 var(--ff-base);
 }
 
+html {
+  zoom: .56;
+}
+
 h1, h2 {
   font-family: 'Syne', sans-serif;
 }
